# NTRU-GW-SRC

./: README.md  bench.py
CLI/: NTRU.cpp  NTRU.h  main.cpp
GUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  ntru.cpp  ntru.h
